# thinkmoney-ai-interview

./: .gitignore  README.md  TASK.md  pyproject.toml
src/: config.py  graph.py  main.py  models.py
src/agents/: README.md  account.py  card.py  conflict_resolver.py  hitl.py  kyc.py  payment.py  transaction.py  triage.py  utils.py
src/knowledge_base/: loader.py
src/knowledge_base/data/: faq.md  fees.md  policies.md  products.md
src/tools/: __init__.py  account.py  cards.py  escalation.py  fraud.py  kyc.py  payments.py  sentiment.py  transactions.py
tests/: test_cli.py  test_config.py  test_graph.py  test_knowledge_base.py  test_models.py  test_tools.py  test_triage.py
