[project]
name = "senior-ai-interview"
version = "0.1.0"
description = "thinkmoney AI Customer Service - Senior AI Engineer Interview Exercise"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.3.0",
    "rich>=13.0",
    "chromadb>=0.6.0",
]

[project.scripts]
thinkmoney = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
